# CountRoo

./: Cargo.toml  LICENSE  README.md
src/: config.txt  lib.rs
src/colorizer/: mod.rs
src/output_adapters/: mod.rs
src/tabular/: mod.rs
